<resources>
    <string name="app_name">FarmaciaApp</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="usu_rio">Usuário</string>
    <string name="endere_o">Endereço</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="informe_o_e_mail_cadastrado">Informe o E-mail Cadastrado:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="adm_codigo">ZmFybWFjaWFlc3BlcmFuw6dh</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_alterar_senha">AlterarSenhaActivity</string>

    <!-- ConfigCreditCardsListFragment -->
    <string name="config_credit_cards_tab_list">CARTÕES</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="credit_card_list_empty">
        Ainda não há cartões de crédito cadastrados.
    </string>
    <string name="credit_card_removed">
        Cartão de crédito removido com sucesso.
    </string>
    <string name="credit_card_enterprise_label">Bandeira:</string>
    <string name="credit_card_number_label">Número:</string>
    <string name="credit_card_owner_name_label">Nome:</string>
    <string name="remove_item">Remover</string>
    <string name="remove_item_going">Removendo&#8230;</string>

    <!-- ConfigNewCreditCardFragment -->
    <string name="config_credit_cards_tab_new">NOVO</string>

    <string name="add_credit_card_number_label">Número:</string>
    <string name="add_credit_card_enterprise_label">Bandeira:</string>
    <string name="add_credit_card_owner_name_label">
        Nome (como está no cartão):
    </string>
    <string name="add_credit_card_owner_reg_number_label">
        CPF / CNPJ do proprietário do cartão:
    </string>
    <string name="add_credit_card_expiry_label">Vencimento:</string>
    <string name="add_credit_card_expiry_month_label">Mês:</string>
    <string name="add_credit_card_expiry_year_label">
        Ano (quatro dígitos):
    </string>
    <string name="add_credit_card_security_code_label">
        Código de segurança:
    </string>

    <string name="add_credit_card">Adicionar cartão</string>
    <string name="add_credit_card_going">Adicionando&#8230;</string>

    <string name="invalid_credit_card">
        Cartão inválido, verifique os dados novamente.
    </string>
    <!-- ConfigCreditCardsActivity -->
    <string name="title_activity_config_credit_cards">
        Cartões de crédito
    </string>
</resources>
