<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cadastro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CadastroActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@color/backgroundApp">

        <TextView
                android:text="Você ainda não possui um cadastro\nInsira seus dados abaixo"
                android:textStyle="bold"
                android:textSize="15sp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
                style="@style/mCustromEditText"
                android:layout_marginTop="15dp"
                android:id="@+id/txt_emailCadastro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/categoria_button"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
        />

        <EditText
                style="@style/mCustromEditText"
                android:id="@+id/txt_cpfCadastro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/categoria_button"
                android:gravity="center"
                android:hint="@string/cpf"
                android:inputType="number"
                android:singleLine="true"
        />

        <EditText
                style="@style/mCustromEditText"
                android:id="@+id/txt_nomeCadastro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/categoria_button"
                android:gravity="center"
                android:hint="@string/nome_completo"
                android:singleLine="true"
        />

        <EditText
                style="@style/mCustromEditText"
                android:id="@+id/txt_telefoneCadastro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/categoria_button"
                android:gravity="center"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:singleLine="true"
        />

        <EditText
                style="@style/mCustromEditText"
                android:id="@+id/txt_enderecoCadastro"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/categoria_button"
                android:gravity="center"
                android:hint="@string/endere_o"
                android:singleLine="true"
        />

        <EditText
                style="@style/mCustromEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/categoria_button"
                android:gravity="center"
                android:hint="@string/senha"
                android:singleLine="true"
                android:id="@+id/txt_senhaCadastro"
                android:inputType="textPassword"
        />

        <Button
                style="@style/mCustromEditText"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_btn"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/colorLightGrey"
                android:text="@string/cadastrar"
                android:id="@+id/btn_cadastrar"
                android:textColorHint="@android:color/background_dark"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:hint="Leia os termos de uso e política de privacidade"
        />

    </LinearLayout>

    <include
            android:id="@+id/llProgressBar"
            android:visibility="gone"
            layout="@layout/progress_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>